CHANGELOG
=========

MyKnowledgeBase version 3.3 - march 2016
- added file postmeta
- files archive, index, search and single: relocated postmetadata to separate file
- file style and custom-editor-style: updated html tags (thanks Tom)
- updated text strings (thanks Tom)
- several small adjustments

MyKnowledgeBase version 3.2 - february 2016
- file header: the search bar in header is for posts only
- theme customizer: change search bar title
- file search: post nav inside the loop
- file style: fixed alignment of next and prev post link
- several small adjustments

MyKnowledgeBase version 2.9 - january 2016
- file header: removed is_home so homepage content is not displayed when using a static blog page
- several small adjustments

MyKnowledgeBase version 2.8 - january 2016
- updated file style
- updated file custom-editor-style
- updated file functions

MyKnowledgeBase version 2.7 - december 2015
- theme customizer: set amount of posts for each knowledgebase category
- file functions: theme customizer
- updated files page-knowledge-three and page-knowledge-four
- several files: updated postmetadata
- file style: several modifications
- several small adjustments
- updated pot file

MyKnowledgeBase version 2.5 - november 2015
- updated archive.php (added the_archive_title and the_archive_description)
- updated pot file
- removed translations (to support language packs from wordpress.org)
- several small adjustments

MyKnowledgeBase version 2.4 - september 2015
- updated knowledgebase page templates 
- updated file comments
- updated pagelink
- file footer: copyrights
- file archive and index: added pagetitle when no posts are found
- changed postmetadata heading into div
- reordered mobile stylesheet
- added Swedish translation (thanks Stefan)
- updated language files
- several small adjustments

MyKnowledgeBase version 2.2 - june 2015
- file single: removed if statement
- file functions, comments and style: changed alignment of comment nav
- reordered file style