@@ -99,8 +99,8 @@
 		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
 		'before_widget' => '<div id="%1$s" class="widget %2$s">',
 		'after_widget' => '</div>',
-		'before_title' => '<h4 class="widgettitle">',
-		'after_title' => '</h4>',
+		'before_title' => '<h3 class="widgettitle">',
+		'after_title' => '</h3>',
 	) );
 
 	register_sidebar( array(
@@ -109,8 +109,8 @@
 		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
 		'before_widget' => '<div id="%1$s" class="widget %2$s">',
 		'after_widget' => '</div>',
-		'before_title' => '<h4 class="widgettitle">',
-		'after_title' => '</h4>',
+		'before_title' => '<h3 class="widgettitle">',
+		'after_title' => '</h3>',
 	) );
 
 	register_sidebar( array(
@@ -119,8 +119,8 @@
 		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
 		'before_widget' => '<div id="%1$s" class="widget %2$s">',
 		'after_widget' => '</div>',
-		'before_title' => '<h4 class="widgettitle">',
-		'after_title' => '</h4>',
+		'before_title' => '<h3 class="widgettitle">',
+		'after_title' => '</h3>',
 	) );
 
 	register_sidebar( array(
@@ -129,8 +129,8 @@
 		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
 		'before_widget' => '<div id="%1$s" class="widget %2$s">',
 		'after_widget' => '</div>',
-		'before_title' => '<h4 class="widgettitle">',
-		'after_title' => '</h4>',
+		'before_title' => '<h3 class="widgettitle">',
+		'after_title' => '</h3>',
 	) );
 
 	register_sidebar( array(
@@ -139,8 +139,8 @@
 		'description' => __( 'You can add one or multiple widgets here.', 'myknowledgebase' ),
 		'before_widget' => '<div id="%1$s" class="widget %2$s">',
 		'after_widget' => '</div>',
-		'before_title' => '<h4 class="widgettitle">',
-		'after_title' => '</h4>',
+		'before_title' => '<h3 class="widgettitle">',
+		'after_title' => '</h3>',
 	) );
 
 	}
