@@ -15,9 +15,9 @@
 			</div>
 		<?php endif; ?>
 
-		<h4 class="post-title">
+		<h2 class="post-title">
 			<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php printf(__('Permalink to %s', 'myknowledgebase'), the_title_attribute('echo=0')); ?>"> <?php the_title(); ?></a> 
-		</h4>
+		</h2>
 
 		<?php get_template_part( 'postmeta' ); ?>
 
@@ -39,7 +39,7 @@
 		</div>
 
 		<?php else: ?>
-			<h4 class="page-title"><?php _e( 'Nothing Found', 'myknowledgebase' ); ?></h4>
+			<h1 class="page-title"><?php _e( 'Nothing Found', 'myknowledgebase' ); ?></h1>
 			<p><?php _e('Sorry, no posts matched your criteria.', 'myknowledgebase'); ?></p>
 
 	<?php endif; ?>
