@@ -10,7 +10,7 @@
 
 	<?php while ( have_posts() ) : the_post(); ?>
 
-		<h4 class="page-title"><?php the_title(); ?></h4>
+		<h1 class="page-title"><?php the_title(); ?></h1>
 
 		<?php if ( has_post_thumbnail() ) { 
 			the_post_thumbnail('single', array('class' => 'single-image')); 
