@@ -1,11 +1,11 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 3.3
+Version: 3.4
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, widget areas on homepage, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. Enjoy. 
-Tags: one-column, two-columns, right-sidebar, fixed-layout, responsive-layout, full-width-template, custom-background, custom-header, custom-menu, featured-images, white, blue, light, gray, editor-style, translation-ready
+Tags: one-column, two-columns, right-sidebar, fixed-layout, responsive-layout, full-width-template, custom-background, custom-header, custom-menu, featured-images, blue, gray, editor-style, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: myknowledgebase
@@ -134,7 +134,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 #header-first .logo {width:35%; float:left;}
 #header-first .logo h1 {font-size:2em;}
 #header-first .logo h1 a:hover {text-decoration:none; color:#333;}
-#header-first .logo h5 {padding:0 0 10px; font-style:italic;}
+#header-first .logo h2 {padding:0 0 10px; font-style:italic; font-size:1.0em;}
 #header-first .logo img {padding:0 0 10px;}
 
 
@@ -181,12 +181,12 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 #header-third {width:96%; clear:both; float:left; background:#08a0ff; margin:10px 0; padding:0 2%;}
 
 
-/* HEADER THIRD SEARCH */
+/* HEADER THIRD SEARCH BAR */
 #header-third .search-form {width:50%; float:right; text-align:right;} 
-#header-third .search-title {width:50%; float:left; color:#fff; margin:8px 0 0;}
+#header-third .searchbar-title {width:50%; float:left; color:#fff; margin:8px 0 0; font-size:1.5em;}
 
 
-/* HEADER THIRD SEARCH INPUTS */
+/* HEADER THIRD SEARCH BAR INPUTS */
 #header-third input {padding:5px; background:#fff; color:#333;}
 #header-third input[type="submit"]{padding:5px; background:#fff; color:#333;}
 #header-third input[type="submit"]:hover {background:#333; color:#fff;}
@@ -210,13 +210,14 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 10px;}
+.page-title {clear:both; padding:0 0 10px; font-size:1.5em; line-height:1.5em;}
+.page-title-post {clear:both; font-size:1.5em; line-height:1.5em;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
-.post-title {clear:both;}
+.post-title {clear:both; font-size:1.5em; line-height:1.5em;}
 .post-title a:hover {color:#333; text-decoration:none;}
 .sticky {clear:both; display:block; text-align:center; color:#fff; background:#08a0ff; margin:0 0 10px; padding:2px 5px;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
@@ -254,6 +255,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
 .gallery-caption {max-width:100%; text-align:center;}
 
+#container .gallery img {border:0;}
+
 
 /* SEARCHFORM */
 .search-form {padding:10px 0;}
@@ -287,7 +290,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:33%; float:right; padding:20px 0 0;}
 .widget {padding:0 0 10px; margin:0 0 20px; border-bottom:1px solid #eee;}
-.widgettitle {margin:0 0 10px;}
+.widgettitle {margin:0 0 10px; font-size:1.5em;}
 
 
 /* FOOTER */
@@ -326,14 +329,14 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* HEADER */
 	#header-first .logo {width:100%; text-align:center;}
 	#header-first .logo h1 {font-size:2em; text-align:center;}
-	#header-first .logo h5 {padding:0; font-size:1em; text-align:center;}
+	#header-first .logo h2 {padding:0; font-size:1em; text-align:center;}
 	#header-first .logo img {padding:0;}
 	#header-second .image-homepage {width:100%; margin:0 0 10px;}
 	#header-second .sidebar-homepage {width:100%; float:left;}
 	#header-second .widget {padding:0 3%;}
 	#header-second .widgettitle {padding:0; background:none;}
-	#header-third .search-title {width:100%; margin:0;}
 	#header-third .search-form {width:100%; float:left; text-align:left;} 
+	#header-third .searchbar-title {width:100%; margin:0;}
 
 	/* MENU */
 	.nav-head ul {display:none;} 
@@ -354,7 +357,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#categories-four .cat-list {width:47%; margin:0 2% 10px 0; padding:10px 1%;}
 
 	/* HEADINGS */
-	.post-title, .page-title, #header-third .search-title, .widgettitle, #header-second .widgettitle, #footer .widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.3em;}
+	.post-title, .page-title, .page-title-post, .searchbar-title, .widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.3em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
