@@ -1,6 +1,17 @@
 CHANGELOG
 =========
 
+MyKnowledgeBase version 3.4 - march 2016
+- added file postmeta-single
+- file single: relocated postmetadata to separate file
+- bugfix in file custom-editor-style: removed tags from reset stylesheet
+- seo improvement: blog description is h2 (thanks Tom)
+- seo improvement: all page titles are h1 and all post titles are h2 (thanks Tom)
+- seo improvement: all widget titles are h3 (thanks Tom)
+- file single: changed title class into .page-title-post
+- file header: changed class .search-title into .searchbar-title
+- updated readme file to WordPress default
+
 MyKnowledgeBase version 3.3 - march 2016
 - added file postmeta
 - files archive, index, search and single: relocated postmetadata to separate file
